fix text alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -154,6 +154,7 @@ footer p {
   margin: 20px;
   font-style: italic;
   font-size: 24px;
+  text-align: center;
 }
 
 @media screen and (max-width: 600px) {
